[tool.poetry]
name = "north-3"
version = "0.1.0"
description = ""
authors = ["anna-golovacheva <anna.ch.ollala@gmail.com>"]
readme = "README.md"
packages = [{include = "north_3"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
